# polyglot-agent

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/polyglot/: agent.py  audit.py  cli.py  config.py  pricing.py  safety.py  sessions.py
src/polyglot/tools/: base.py  browser.py  mcp.py  system.py
tests/: test_agent_loop.py  test_config.py  test_pricing.py  test_safety.py  test_sessions.py  test_tools_system.py
