[project]
name = "polyglot-agent"
version = "0.1.0"
description = "Terminal LLM agent with system and browser tool-use"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.48.0",
    "prompt-toolkit>=3.0.47",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
]

[project.scripts]
polyglot = "polyglot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
